# YG_utils_analysis

./: .gitignore  LICENSE.txt  README.md  requirements.txt  setup.cfg
src/analysis/: DLC2BORIS.py  behavior_preprocessing.py  dlc2boris43CT.py  dlc2boris4DI.py  epoch_analysis.py  flip_videos.py  fp_preprocessing.py  fp_preprocessing_2ch.py  group_summary.py  group_summary_2.py  load_rwd_fpfile.py  peak_analysis.py  rename_files.py  video_resizing.py
src/utils/: DLCFunctions.py  FPFunctions.py  FileFunctions.py  OmicsFunctions.py  OmicsPlotFunctions.py  PlotFunctions.py  ReportGeneration.py  VideoFunctions.py  boris_export.py  config_utils.py  logging_utils.py
