[metadata]
name = YG_utils_analysis
version = 0.1.0
author = YGKim
author_email = parkgilbong@gmail.com
description = A collection of analysis routines for fiber photometry data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/parkgilbong/YG_utils_analysis
license = MIT
classifiers =
    Programming Language :: Python :: 3.11.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    matplotlib
    seaborn
    matplotlib-venn
    opencv-python
    PyYAML
    tqdm
    scipy
    shapely
    reportlab
    moviepy
    # The 'tdt' package seems to be a specialized library.
    # If it's not on PyPI, you may need to install it manually first.
    # tdt

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    yg-behavior-preprocess = analysis.behavior_preprocessing:main
    yg-fp-preprocess = analysis.fp_preprocessing:main
    yg-dlc2boris = analysis.DLC2BORIS:main
    yg-peak-analysis = analysis.peak_analysis:main
    yg-epoch-analysis = analysis.epoch_analysis:main

